--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_URL", "\"https://api.themoviedb.org/3/\""
+        buildConfigField "String", "IMAGE_URL", "\"https://image.tmdb.org/t/p/w342/\""
+        buildConfigField "String", "API_KEY", "\"0e8b96bbbfb9a12b5fc83724af528456\""
     }
     buildTypes {
         release {
@@ -26,11 +29,20 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     // card view
     implementation 'com.android.support:cardview-v7:28.0.0'
+    // recycler view
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // rounded image
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.6.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    // architecture component
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
