--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     def converter_gson_version = "2.6.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.preference:preference:1.1.0-alpha05'
     kapt 'androidx.databinding:databinding-compiler:3.5.1'
     // design
     //noinspection GradleCompatible
