--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.didik.mcd">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity
+            android:name=".ui.settings.SettingsActivity"
+            android:label="@string/title_activity_settings" />
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,13 +20,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.movie.detail.MovieDetailActivity"
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".ui.tv.detail.TvShowDetailActivity"
             android:theme="@style/AppThemeNoActionBar" />
+
+        <provider
+            android:name="com.didik.mcd.provider.MovieAppProvider"
+            android:authorities="com.didik.mcd.provider"
+            android:enabled="true"
+            android:exported="true"
+            android:multiprocess="true"
+            android:permission="com.didik.mcd.provider.READ_WRITE" />
 
         <receiver android:name=".widget.FavoriteWidget">
             <intent-filter>
@@ -36,8 +44,16 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/movie_widget_info" />
         </receiver>
+
         <service
             android:name=".widget.StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
+
+    <permission
+        android:name="com.didik.mcd.provider.READ_WRITE"
+        android:protectionLevel="normal" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
